manifest.yml review

--- a/sentimentAnalyzeServer/manifest.yml
+++ b/sentimentAnalyzeServer/manifest.yml
@@ -2,6 +2,7 @@
 applications:
 - path: .
   name: bru-137-sentiment-analyzer #change to be unique in IBM Cloud
+  buildpack: nodejs_buildpack
   memory: 256M
   instances: 1
   random-route: true
